<resources>
    <string name="app_name">One Way</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_service">Schedule Service</string>
    <string name="service_image">Service Image</string>
    <string name="tap_to_expand">tap to expand</string>
    <string name="total">Subtotal:</string>
    <string name="_0_00">$0.00</string>
    <string name="next">Next</string>
    <string name="select_date">Date</string>
    <string name="select_time">Time</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="unit">Unit</string>
    <string name="add_unit">Add Unit</string>
    <string name="review">Review</string>
    <string name="invalid_date">Invalid Date: In the past</string>
    <string name="required">*Required</string>
    <string name="to_confirm">*Used to Confirm Appointment</string>
    <string name="property_name">Property Name</string>
    <string name="additional_services">Additional Services: </string>
    <string name="your_info">Contact Information</string>
    <string name="edit">EDIT</string>
    <string name="submit">Submit</string>
    <string name="add_service">Service</string>
    <string name="title">TITLE</string>
    <string name="delete">Delete</string>
    <string name="done">done</string>
    <string name="done_editing">Done Editing</string>
    <string name="cancel">Cancel</string>
    <string name="close" />
    <string name="dollar">$</string>
    <string name="no_service_selected">A Service Must be Selected</string>
    <string name="service_deleted">Service Deleted</string>
    <string name="service_transition_name">service_%1$s</string>
    <string name="expanded_service_transition_name">expanded_service</string>
    <string name="error_time">8AM to 4PM only</string>
    <string name="total_">$%1s</string>
    <string name="schedule_service_menu">Schedule Service menu</string>
    <string name="edit_">Edit</string>
    <string name="more_info">+ More Info</string>
    <string name="less_info">- Less Info</string>
    <string name="item_expander">item expander</string>
    <string name="add_on">Add Ons:</string>
    <string name="your_services">Your Services Total: </string>
    <string name="enter_verify">Verify</string>
    <string name="verify">Enter the code sent to the phone number provided to confirm contact and appointment information</string>
    <string name="verification_code">Verification code</string>
    <string name="resend_verification">Resend Code</string>
    <string name="invalid_verification">Invalid Code</string>
    <string name="return_home">Return Home</string>
    <string name="closing_msg">Thank You %1s for using One Way Mobile Scheduling service! Your appointment request has been received for date: %2s</string>
    <string name="company_logo">Company Logo</string>
</resources>