<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".SubmitFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/verify"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/verification_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:text="@string/enter_verify" />

        <Button
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/resend_verification" />

    </LinearLayout>
</layout>