<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="form"
            type="com.example.carpetcleaner.data.Form" />

        <variable
            name="viewModel"
            type="com.example.carpetcleaner.ui.scheduler.SchedulerViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.scheduler.CustomerScheduler">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_event_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date"
                    android:text="@{form.date}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:helperText="@string/required"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_access_time_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_time"
                    android:text="@{form.time}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:helperText="@string/required"
                app:layout_constraintEnd_toEndOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{form.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/phone_number"
                app:helperText="@string/to_confirm"
                app:layout_constraintEnd_toEndOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/customer_name"
                app:startIconDrawable="@drawable/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@{form.number}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/address"
                app:helperText="@string/required"
                app:layout_constraintEnd_toEndOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/date"
                app:layout_constraintTop_toBottomOf="@id/customer_number"
                app:startIconDrawable="@drawable/home"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{form.address}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/to_review"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:text="@string/review"
                app:layout_constraintTop_toBottomOf="@id/customer_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.973" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>