<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="scheduledService"
            type="com.example.carpetcleaner.data.ScheduledService" />

        <variable
            name="clickListener"
            type="com.example.carpetcleaner.review.ScheduledServiceListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:onClick="@{(view) -> clickListener.onClick(view, scheduledService)}"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/schedule_service"
                android:scaleType="fitXY"
                app:glideCircularCrop="@{true}"
                app:glideSrc="@{scheduledService.serviceImg}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/service_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{scheduledService.mainService}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/service_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{@string/total_(String.valueOf(scheduledService.total))}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toStartOf="@id/expander"
                app:layout_constraintStart_toEndOf="@id/img"
                app:layout_constraintTop_toBottomOf="@id/service_title" />

            <ImageButton
                android:id="@+id/expander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#00FFFFFF"
                android:clickable="false"
                android:contentDescription="@string/more_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_title"
                app:srcCompat="@drawable/ic_baseline_expand_more_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/add_ons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/add_on"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    app:goneUnless="@{scheduledService.subServicesNotEmpty}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/additional_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_ons" />

                <Button
                    android:id="@+id/delete"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> clickListener.onDeleteClicked(scheduledService)}"
                    android:text="@string/delete"
                    app:icon="@drawable/ic_outline_delete_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/edit"
                    app:layout_constraintTop_toBottomOf="@id/additional_info" />

                <Button
                    android:id="@+id/edit"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> clickListener.onEditClicked(scheduledService)}"
                    android:text="@string/edit"
                    app:icon="@drawable/edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>